<resources>
    <string name="app_name">Planet Quiz</string>
    <string name="planet_quiz">PLANET QUIZ</string>

    <!-- Button labels -->
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="pluto">Pluto</string>


    <!-- Quiz Questions -->
    <string name="question_largest_planet">What is the largest planet?</string>
    <string name="question_most_moons">Which planet has the most moons?</string>
    <string name="question_axis_tilt">Which planet spins on its side?</string>

    <!-- Answer Details -->
    <string name="answer_largest_planet">Jupiter is the largest planet and is 2.5 times the mass of all the other planets put together.</string>
    <string name="answer_most_moons">Saturn has the most moons and has 82 moons.</string>
    <string name="answer_axis_tilt">Uranus spins on its side with its axis at nearly a right angle to the Sun.</string>
</resources>
