<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMercury"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mercury"/>

        <Button
            android:id="@+id/btnVenus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venus"/>

        <Button
            android:id="@+id/btnEarth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/earth"/>

        <Button
            android:id="@+id/btnMars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/mars"/>

        <Button
            android:id="@+id/btnJupiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jupiter"/>

        <Button
            android:id="@+id/btnSaturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturn"/>

        <Button
            android:id="@+id/btnUranus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uranus"/>

        <Button
            android:id="@+id/btnNeptune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neptune"/>

        <Button
            android:id="@+id/btnPluto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pluto"/>
    </LinearLayout>
</ScrollView>
